Mention fixed bugs in NEWS and Changelog
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12222 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,8 @@
 
 	* app/pdb/display_cmds.c: regenerated
 
+	Fixes bug #131964 and makes bug #131563 easy to resolve.
+
 2004-01-29  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpcontext.[ch]: removed the last artefact of context
