--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-30  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/helpbrowser/dialog.c: map the Home button to
+	"index.html" and removed the Index button for now.
+
 2004-01-30  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/rcm/rcm_dialog.c (rcm_dialog): fixed help ID.
