--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-30  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-01-30  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Fixed Czech translation.
