2004-01-30  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimptooloptionseditor.[ch]: added the scrolled
	window to the GimpToolOptionsEditor struct.

	(gimp_tool_options_editor_tool_changed): set the active tool's
	help ID on the scrolled window. Fixes bug #132969.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12230 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-30  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimptooloptionseditor.[ch]: added the scrolled
+	window to the GimpToolOptionsEditor struct.
+
+	(gimp_tool_options_editor_tool_changed): set the active tool's
+	help ID on the scrolled window. Fixes bug #132969.
+
 2004-01-30  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/helpbrowser/dialog.c: map the Home button to
