2004-01-31  Manish Singh  <yosh@gimp.org>
        * configure.in: define ARCH_X86_64 globally.

        * app/base/cpu-accel.c: remove local definition.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12231 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-31  Manish Singh  <yosh@gimp.org>
+
+	* configure.in: define ARCH_X86_64 globally.
+
+	* app/base/cpu-accel.c: remove local definition.
+
 2004-01-30  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimptooloptionseditor.[ch]: added the scrolled
