2004-01-31  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpdock.c (gimp_dock_constructor): g_assert() that
	we got the essential construct properties.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12235 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-31  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpdock.c (gimp_dock_constructor): g_assert() that
+	we got the essential construct properties.
+
+2004-01-31  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/gimpimage-convert.[ch]: use gboolean instead of gint
 	for "alpha_dither" and "remove_dups" in all public and private
 	functions. Properly prototyped private functions. Minor cleanup.
