--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-31  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/dialogs.c: added some g_return_if_fail().
+
+2004-01-31  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpdock.c (gimp_dock_constructor): g_assert() that
 	we got the essential construct properties.
 
