2004-01-31  RaphaÃ«l Quinet  <quinet@gamers.org>
	* plug-ins/common/tiff.c (tiff_warning, tiff_error): Do not
	display the warning message about unknown tags for unregistered
	private tags (>= 32768).  Fixes bug #131975.  Do not display the
	error message about random access not supported for images using
	JPEG compression.  Fixes bug #132297.  It would be better to allow
	the user to customize which messages should be displayed or not,
	but this can be done in a future release.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12238 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-01-31  Raphaël Quinet  <quinet@gamers.org>
+
+	* plug-ins/common/tiff.c (tiff_warning, tiff_error): Do not
+	display the warning message about unknown tags for unregistered
+	private tags (>= 32768).  Fixes bug #131975.  Do not display the
+	error message about random access not supported for images using
+	JPEG compression.  Fixes bug #132297.  It would be better to allow
+	the user to customize which messages should be displayed or not,
+	but this can be done in a future release.
+
 2004-01-31  Michael Natterer  <mitch@gimp.org>
 
 	Use the global <Image> accel_group in all docks except the
