--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+2004-02-01  Dave Neary  <bolsh@gimp.org>
+
+	* libgimpwidgets/gimpwidgets.c
+	* libgimpwidgets/gimpwidgets.h: Modify random seed widget to 
+	allow the user to specify that a seed should be chosen 
+	randomly for them (useful to allow re-running random plug-ins 
+	several times to get several different results).
+
+	* plug-ins/common/blur.c
+	* plug-ins/common/plasma.c
+	* plug-ins/common/randomize.c
+	* plug-ins/common/sinus.c
+	* plug-ins/common/snoise.c
+	* plug-ins/gflare/gflare.c
+	* plug-ins/maze/algorithms.c
+	* plug-ins/maze/maze.c
+	* plug-ins/maze/maze.h
+	* plug-ins/maze/maze_face.c: Changed appropriately.
+
+	This fixes bug #129529.
+
 2004-01-31  Raphaël Quinet  <quinet@gamers.org>
 
 	* plug-ins/common/tiff.c (tiff_warning, tiff_error): Do not
