2004-02-01  Simon Budig  <simon@gimp.org>
	* app/display/gimpdisplayshell-scale.c: initialize variable
	to avoid stupid compiler warning.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12241 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-01  Simon Budig  <simon@gimp.org>
+
+	* app/display/gimpdisplayshell-scale.c: initialize variable
+	to avoid stupid compiler warning.
+
 2004-02-01  Dave Neary  <bolsh@gimp.org>
 
 	* libgimpwidgets/gimpwidgets.c
