2004-02-01  Michael Natterer  <mitch@gimp.org>
	* app/plug-in/plug-ins.c (plug_ins_init): when removing a
	duplicate PDB procedure, also remove it from gimp->load_procs and
	gimp->save_procs.  Fixes bug #133099.

	Some general cleanup like moving variables to local scopes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12243 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-01  Michael Natterer  <mitch@gimp.org>
+
+	* app/plug-in/plug-ins.c (plug_ins_init): when removing a
+	duplicate PDB procedure, also remove it from gimp->load_procs and
+	gimp->save_procs.  Fixes bug #133099.
+
+	Some general cleanup like moving variables to local scopes.
+
 2004-01-31  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/common/tiff.c (tiff_warning): use G_VA_COPY for copying
