2004-02-01  Michael Natterer  <mitch@gimp.org>
	* app/xcf/xcf-load.c (xcf_load_layer): no need to set the layer
	mask's offsets, gimp_layer_add_mask() does this for us. Simplified
	mask property assignments.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12246 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-02-01  Michael Natterer  <mitch@gimp.org>
 
+	* app/xcf/xcf-load.c (xcf_load_layer): no need to set the layer
+	mask's offsets, gimp_layer_add_mask() does this for us. Simplified
+	mask property assignments.
+
+2004-02-01  Michael Natterer  <mitch@gimp.org>
+
 	Reworked random seed handling once more:
 
 	* libgimpwidgets/gimpwidgets.c (gimp_random_seed_new): make sure
