--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-02  Jan Morén  <jan.moren@lucs.lu.se>
+
+	* sv.po: Updated Swedish translation.
+
 2004-01-30  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
