2004-02-02  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpimagedock.c (gimp_image_dock_constructor):
	also destroy the <Image> factory's "Tools" submenu because menu
	shortcuts with no or <shift> modifier prevent this key to be
	entered in text entries. This really badly baldy cries for
	GTK+ 2.4's GtkActions...


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12252 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-02  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpimagedock.c (gimp_image_dock_constructor):
+	also destroy the <Image> factory's "Tools" submenu because menu
+	shortcuts with no or <shift> modifier prevent this key to be
+	entered in text entries. This really badly baldy cries for
+	GTK+ 2.4's GtkActions...
+
 2004-02-01  Michael Natterer  <mitch@gimp.org>
 
 	* app/config/gimpconfig-path.c (gimp_config_path_expand_only):
