2004-02-03  Michael Natterer  <mitch@gimp.org>
	* plug-ins/script-fu/script-fu-scripts.c (script_fu_free_script):
	call gimp_uninstall_temp_proc() with script->pdb_name, not
	script->script_name. Fixes bug #133280.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12256 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-03  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/script-fu/script-fu-scripts.c (script_fu_free_script): 
+	call gimp_uninstall_temp_proc() with script->pdb_name, not
+	script->script_name. Fixes bug #133280.
+
 2004-02-02  DindinX  <david@dindinx.org>
 
 	* app/display/gimpcanvas.c: gimp_canvas_draw_segments():
